<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="select_search_field">
        <item>Alt</item>
        <item>Tag</item>
        <item>Navn</item>
        <item>Kategori</item>
        <item>Under kategori</item>
    </string-array>
    
    <string name="app_name">Søg Pictogrammer</string>
    <string name="help">Hjælp</string>
    <string name="text_input">Text Input</string>
    <string name="search">Søg</string>
    <string name="reset">Ryd</string>
    <string name="delete">Slet</string>
    <string name="send">Send</string>
	<string name="checkoutList">Checkout list:</string>
	<string name="pictograms">Pictogrammer: </string>
    
    <string name="picture">Default picture content description</string>
    <string name="title_activity_help_menu">HelpMenu</string>
    <string name="title_activity_admin_category">AdminCategory</string>
    <string name="title_activity_picto_main">Søg Pictogrammer</string>
    
</resources>
