<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:keepScreenOn="true"
    tools:context=".PictoAdminMain" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="0.13"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal">

            <Spinner
                android:id="@+id/select_search_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/select_search_field" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkoutList"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <GridView
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="@drawable/sentenceboardlayout" >

    </GridView>
       
    </LinearLayout>
    
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/text_input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_input"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search"
                android:onClick="searchForPictogram"
                android:src="@drawable/ic_action_search" />

            <TextView
                android:id="@+id/clear_search_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/clearSearchFieldButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reset"
                android:onClick="clearSearchField"
                android:src="@drawable/navigation_cancel" />

            <TextView
                android:id="@+id/delete_checkout_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/deleteCheckoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/content_discard"
                android:onClick="clearCheckoutList" />

            <TextView
                android:id="@+id/search_button_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/sendContentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reset"
                android:src="@drawable/action_send"
                android:onClick="sendContent" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Croc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reset"
                android:onClick="gotoCroc"
                android:src="@drawable/device_access_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <TextView
                android:id="@+id/PictoGridDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictograms"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff0000" />

            <ImageView
                android:id="@+id/errorIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/picture" />
        </LinearLayout>

        <GridView
            android:id="@+id/pictogram_displayer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:numColumns="8"
            android:background="@drawable/sentenceboardlayout" >
            
        </GridView>

    </LinearLayout>

</LinearLayout>